# actionpopulaire.fr

./: .babelrc  .editorconfig  .eslintrc.js  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .lando.env  .lando.yml  .travis.yml  Dockerfile.api  Dockerfile.front  Pipfile  README.md  Vagrantfile  atelier_data.py  babel.config.json  docker-compose.yml  docker-entrypoint.sh  extract_events.csv  gce.json  install_fonts.sh  jest.config.js  locustfile.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vagrant.sh  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.production.js
.github/: Dockerfile  dependabot.yml
.github/ISSUE_TEMPLATE/: rapport-de-bug.md  suggestion-de-fonctionnalit-.md
.github/workflows/: automerge.yml  codeql-analysis.yml  docker-build.yml  run-tests.yml  sentry.yml  staging-sync.yml  webpack-build.yml
.storybook/: main.js  preview.js  style.css
.storybook/public/: apiMockServiceWorker.js  mockServiceWorker.js
agir/: fixtures.json
agir/activity/: __init__.py  actions.py  admin.py  apps.py  models.py  rules.py  serializers.py  tests.py  urls.py  views.py
agir/api/: admin.py  admin_site.py  admin_urls.py  admin_views.py  apps.py  celery.py  context_processors.py  front_urls.py  handlers.py  redis.py  routers.py  settings.py  settings_utils.py  test_runner.py  urls.py  wsgi.py
agir/authentication/: __init__.py  admin.py  apps.py  backend.py  backend_mixins.py  context_processors.py  crypto.py  forms.py  metrics.py  middleware.py  models.py  serializers.py  signals.py  signers.py  subscription.py  tasks.py  tests.py  tokens.py  urls.py  utils.py  view_mixins.py  views.py
agir/cagnottes/: actions.py  admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
agir/carte/: models.py  serializers.py  tests.py  urls.py  views.py
agir/checks/: __init__.py  admin.py  apps.py  models.py  payment_mode.py  tasks.py  views.py
agir/clients/: __init__.py  admin.py  apps.py  authentication.py  models.py  oauth_validators.py  permissions.py  rules.py  scopes.py  serializers.py  signals.py  tests.py  tokens.py  viewsets.py
agir/donations/: __init__.py  actions.py  admin.py  allocations.py  apps.py  base_forms.py  base_views.py  form_fields.py  forms.py  model_fields.py  models.py  rules.py  serializers.py  spending_requests.py  tasks.py  tests.py  urls.py  validators.py  views.py
agir/elections/: actions.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
agir/elus/: actions.py  admin.py  apps.py  forms.py  models.py  rules.py  serializers.py  tests.py  urls.py  views.py
agir/europeennes/: __init__.py  actions.py  apps.py  forms.py  tasks.py  tests.py  urls.py  views.py
agir/europeennes2024/: apps.py  compteurs.py  forms.py  payment_mode.py  tasks.py  urls.py  views.py
agir/event_requests/: actions.py  apps.py  models.py  permissions.py  rules.py  serializers.py  signals.py  tasks.py  urls.py
agir/events/: __init__.py  apps.py  display.py  filters.py  forms.py  models.py  rules.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py  viewsets.py
agir/front/: api_views.py  backend.py  build.py  locustfile.py  oauth.py  serializer_utils.py  sitemaps.py  tests.py  urls.py  view_mixins.py  views.py
agir/gestion/: actions.py  apps.py  models.py  permissions.py  rules.py  signals.py  typologies.py  utils.py  virements.py
agir/groups/: __init__.py  apps.py  display.py  filters.py  forms.py  models.py  proxys.py  rules.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py  viewsets.py
agir/ilb/: __init__.py  apps.py  forms.py  urls.py  views.py
agir/javascript_components/: richEditor.js
agir/legacy/: __init__.py  apps.py  europeennes.py  europeennes2019.py  presidentielle2017.py  utils.py
agir/legislatives2022/: __init__.py  apps.py  zones.py
agir/lib/: __init__.py  admin.py  apps.py  autocomplete_filter.py  celery.py  commands.py  decorators.py  display.py  documents.py  export.py  filters.py  form_components.py  form_fields.py  form_mixins.py  forms.py  geo.py  google_sheet.py  history.py  html.py  http.py  iban.py  locust_utils.py  mailing.py  mailtrain.py  management_utils.py  materiel.py  middleware.py  model_fields.py  models.py  pagination.py  permissions.py  phone_numbers.py  rest_framework_permissions.py  rules.py  search.py  serializers.py  sms.py  stats.py  storage.py  tasks.py  (+5 more)
agir/loans/: __init__.py  actions.py  apps.py  display.py  forms.py  loan_config.py  tasks.py  tests.py  urls.py  views.py
agir/mailing/: __init__.py  actions.py  admin.py  apps.py  metrics.py  models.py  signals.py  tests.py
agir/money/: __init__.py  payment_mode.py
agir/msgs/: __init__.py  actions.py  admin.py  apps.py  models.py  rules.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
agir/municipales/: __init__.py  actions.py  admin.py  apps.py  campagnes.py  forms.py  models.py  payment_type.py  rules.py  serializers.py  tasks.py  tests.py  urls.py  views.py
agir/notifications/: __init__.py  actions.py  admin.py  apps.py  context_processors.py  models.py  rules.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  views.py
agir/payments/: __init__.py  abstract_payment_mode.py  actions.py  admin.py  apps.py  forms.py  imported.py  models.py  payment_modes.py  signals.py  types.py  urls.py  views.py
agir/people/: __init__.py  admin.py  apps.py  backend.py  form_fields.py  form_mixins.py  forms.py  lookups.py  metrics.py  model_fields.py  models.py  rules.py  serializers.py  signals.py  tags.py  tasks.py  tests.py  token_buckets.py  urls.py  validators.py  views.py  viewsets.py
agir/polls/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
agir/pos/: __init__.py  payment_mode.py
agir/presidentielle2022/: __init__.py  actions.py  apps.py  (+5 more)
jest/: setup.js
scripts/: celery.sh  install_dependencies.sh  install_fonts.sh  vagrant.sh
src/: fixtures.json  manage.py
(+37792 files in other folders)
