[tool.poetry]
name = "agir"
version = "0"
description = ""
authors = ["La France insoumise <site@lafranceinsoumise.fr>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
# Django et extensions
django = ">=3.0,<4.0"
## config helpers
dj-database-url = "==0.5.*"  # for easing up database settings
dj-email-url = "==0.2.*"  # for easing up SMTP settings
django-cors-headers = "==3.*"  # configuring CORS Headers
## model and form fields
django-countries = "==7.*"  # country fields
django-phonenumber-field = "==3.*"  # phone number field
phonenumbers = "==8.12.11"  # optional requirement of django-phonenumber-field
django-stdimage = "==5.*"  # better image field with handling of variations
django-dynamic-filenames = "==1.*"  # better handling of upload path for file fields
unicode-slugify = "==0.1.*"  # optional requirement of django-dynamic-filenames
## additional features
django-crispy-forms = "==1.*" # better forms
django-otp = "==1.*"  # 2FA in admin
django-filter = "==2.*"  # add useful filters
django-oauth-toolkit = "==1.*"  # add OAuth server
rules = "==3.*"  # add useful authorization rules
django-reversion = "==3.*"  # versioning of models
## Django Rest Framework
djangorestframework = "==3.*,>=3.10"
djangorestframework-gis = "==0.16.*"
## adapters for third-party systems
django-redis = "==4.*"
psycopg2 = "*"
django-prometheus = "==2.*"
# celery
celery = "==4.*"
celery-prometheus-exporter = "==1.*"
# redis
redis = ">=3.2.0"
hiredis = "==1.*"
# HTTP
requests = ">=2.20.0, ==2.*"
# HTML
bleach = "==3.*"  # sanitize HTML
"html2text" = "==2020.*"  # transforms HTML to text (used for plain text versions of HTML emails)
markdown = "==3.*"  # convert markdown text to HTML (should be deprecated)
# image handling
Pillow = ">=7.1.0"
# command line helpers
tqdm = "*"
# third party techs
prometheus-client = "==0.7.*"
cysystemd = "==1.*"
ovh = "*"
nuntius = ">=2.2.3"
# parsing and formats
ics = "*"  # calendar format
iso8601 = "*"  # parse ISO8601 dates
django-anymail =  "==8.*"
boto3 = "*"
num2words = "*"
sepaxml = "==2.*"
zeep = "*"
social-auth-app-django = "==4.*"
# data wrangling
glom = "*"
pyrogram = "==0.*"
tgcrypto = "*"
tenacity = "*"
pandas = "==1.*"
data-france = "0.12.1"
beautifultable = "==1.0.*"
scipy = "==1.*"
PyYAML = "==5.*"
xlwt = "==1.*"
django-admin-rangefilter = "*"
faker = "*"
django-silk = "*"
sentry-sdk = "*"
django-push-notifications = "*"
pywebpush = "*"
social-auth-core = "==4.*"
django-storages = "^1.11.1"
qrcode = {extras = ["pil"], version = "^6.1"}

[tool.poetry.dev-dependencies]
ipython = "*"
black = "==19.10b0"
coverage = "*"
django-debug-toolbar = "*"
redislite = "*"  # used for testing
click = "*"
pympler = "*"
locust = "*"
pyquery = "*"
jedi = "==0.17.*"  # version 0.18.* fait crasher IPython (08/01/2021)
hypothesis = {extras = ["django"], version = "^6.13.14"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
