[tool.poetry]
name = "agir"
version = "0"
description = ""
authors = ["La France insoumise <site@lafranceinsoumise.fr>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
# Django et extensions
django = ">=3.0,<4.0"
## config helpers
dj-database-url = "==1.2.*"  # for easing up database settings
dj-email-url = "==1.0.*"  # for easing up SMTP settings
django-cors-headers = "==3.*"  # configuring CORS Headers
## model and form fields
django-countries = "==7.*"  # country fields
django-phonenumber-field = "==7.*"  # phone number field
phonenumbers = "==8.13.4"  # optional requirement of django-phonenumber-field
django-stdimage = "==6.*"  # better image field with handling of variations
django-dynamic-filenames = "==1.*"  # better handling of upload path for file fields
unicode-slugify = "==0.1.*"  # optional requirement of django-dynamic-filenames
## additional features
django-crispy-forms = "==1.*" # better forms
django-otp = "==1.*"  # 2FA in admin
django-filter = "==22.*"  # add useful filters
django-oauth-toolkit = "==1.*"  # add OAuth server
rules = "==3.*"  # add useful authorization rules
django-reversion = "==5.*"  # versioning of models
## Django Rest Framework
djangorestframework = "==3.*,>=3.10"
djangorestframework-gis = "==0.17"
## adapters for third-party systems
django-redis = "==5.*"
psycopg2 = "*"
django-prometheus = "==2.*"
# celery
celery = "==5.*"
celery-prometheus-exporter = "==1.*"
# redis
redis = ">=3.2.0"
hiredis = "==2.*"
# HTTP
requests = "==2.*"
# HTML
bleach = "==5.*"  # sanitize HTML
"html2text" = "==2020.*"  # transforms HTML to text (used for plain text versions of HTML emails)
markdown = "==3.*"  # convert markdown text to HTML (should be deprecated)
# image handling
Pillow = ">=7.1.0"
# command line helpers
tqdm = "*"
# third party techs
prometheus-client = "==0.15.*"
cysystemd = "==1.*"
ovh = "*"
nuntius = "2.3.0b4"
# parsing and formats
ics = "*"  # calendar format
iso8601 = "*"  # parse ISO8601 dates
django-anymail =  "==9.*"
boto3 = "*"
num2words = "*"
sepaxml = "==2.*"
social-auth-app-django = "==4.*"
# data wrangling
glom = "*"
pyrogram = "==2.*"
tgcrypto = "*"
tenacity = "*"
pandas = "==1.*"
data-france = "^0.14.4"
beautifultable = "==1.1.*"
scipy = "==1.*"
PyYAML = "==6.*"
django-admin-rangefilter = "*"
faker = "*"
django-silk = "*"
sentry-sdk = "*"
django-push-notifications =  {version = "*", extras=["apns"]}
pywebpush = "*"
social-auth-core = "==4.0.2"
django-storages = "^1.13.2"
qrcode = {extras = ["pil"], version = "^7.2"}
xlsxwriter = "*"
trio = "^0.22.0"
asks = "^3.0.0"
Django = "^3.2"
pydantic = "^1.10.4"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
ipython = "*"
black = "==22.12.0"
coverage = "*"
django-debug-toolbar = "*"
redislite = "*"  # used for testing
click = "*"
pympler = "*"
hypothesis = {extras = ["django"], version = "^6.61.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
